hphp/hack/test/typecheck/null/option_null.php.exp
File "option_null.php", line 4, characters 19-22:
Unbound name: null (an object type) (Naming[2049])
